# pymergence

./: API_SURFACE_V1.md  FORK_AUDIT_TABLE.md  FORK_INNOVATION_ROADMAP.md  README.md  ROADMAP_SODC_AGENTIC_SCIENCE.md  SODC_PYMERGENCE_INTEGRATION_SPEC_V1.md  Tutorial.ipynb  UPSTREAM_PR_CANDIDATES.md  logs.json  pyproject.toml  recreate_CE2_plots.ipynb  sandbox.ipynb  visualize_emergence.py
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  pymergence.doctree
docs/_build/html/: genindex.html  index.html  modules.html  objects.inv  py-modindex.html  (+3 more)
pymergence/: StochasticMatrix.py  __init__.py  brax_bridge.py  cascade_pulse.py  core.py  equivariant.py  iit.py  io.py  jax_core.py  numba_utils.py  optimization.py  quantum.py  topology.py  utils.py  validation.py
pymergence.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pymergence/accel/: jax_core.py  numba_utils.py
pymergence/core/: CoarseGraining.py  StochasticMatrix.py  backend.py  io.py
pymergence/distributed/: manager.py
pymergence/integration/: brax_integration.py  cascade_pulse.py  causal_discovery.py  molecular.py  quantum.py  sodc_adapter.py
pymergence/lab/: benchmark.py  parity.py  validation.py
pymergence/prototypes/: quantum_native_agent.py
tests/: test_brax_integration.py  test_cascade.py  test_causal_discovery.py  test_causal_primitives.py  test_equinox_architecture.py  test_equivariant.py  test_iit.py  test_io.py  test_jax_backend.py  test_molecular.py  test_quantum.py  test_security_fix.py  test_topology.py  test_utils.py
(+7 files in other folders)
