[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymergence"
version = "0.1.0"
description = "Toolkit for calculating and visualizing causal emergence"
authors = [{name = "PlaceholderName", email = "PlaceholderEmail"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.3.0",
    "networkx>=3.4.0",
    "pygraphviz>=1.14"]

[project.optional-dependencies]
dev = ["pytest>=6.0", "black", "flake8"]